chloe au musee link

--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -1,88 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alvina DR | Chloé au musée</title>
 
-    <link rel="stylesheet" href="../../../css/main.css">
-    <link rel="stylesheet" href="../../../css/text.css">
-    <link rel="stylesheet" href="../../../css/navbar.css">
-    <link rel="stylesheet" href="../../../css/footer.css">
-    <link rel="stylesheet" href="../../../css/page-specific-project.css">
-    <link rel="stylesheet" href="../../../css/pointer.css">
-    <link rel="stylesheet" href="../../../css/blog.css">
-    <link rel="stylesheet" href="../../../css/project-window.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="../../../css/main.css" />
+    <link rel="stylesheet" href="../../../css/text.css" />
+    <link rel="stylesheet" href="../../../css/navbar.css" />
+    <link rel="stylesheet" href="../../../css/footer.css" />
+    <link rel="stylesheet" href="../../../css/page-specific-project.css" />
+    <link rel="stylesheet" href="../../../css/pointer.css" />
+    <link rel="stylesheet" href="../../../css/blog.css" />
+    <link rel="stylesheet" href="../../../css/project-window.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header grid-navbar-blog"></div>
     <navbar id="blog-navbar">
-        <ul class="nav-ul">
-            <li class="nav-link"><a href="../../../index.html">Home</a></li>
-            <li class="nav-link"><a href="../../about.html">About</a></li>
-            <li class="nav-link"><a href="../../contact.html">Contact</a></li>
-        </ul>
-    </navbar>  
-    
-    <div class="grid grid-blog" style="height: calc(3vw * 21 + .1em);"></div>
+      <ul class="nav-ul">
+        <li class="nav-link"><a href="../../../index.html">Home</a></li>
+        <li class="nav-link"><a href="../../about.html">About</a></li>
+        <li class="nav-link"><a href="../../contact.html">Contact</a></li>
+      </ul>
+    </navbar>
+
+    <div class="grid grid-blog" style="height: calc(3vw * 21 + 0.1em)"></div>
     <section id="landing-blog-section">
-        <h1>Chloé au Musée</h1>
+      <h1>Chloé au Musée</h1>
     </section>
 
-<!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
+    <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-        <div class="div-column" style="width: 70%;">
-            <p><b>2022</b> <b>Musée des Beaux Arts</b> <b>Online mobile first</b> <b>Phaser 3</b></p>
-            <p>During the project "Rêve et Ville" ("Dream and City") at the beginning of year 2022, I had the opportunity to create an interactive experience about the Musée des Beaux-Arts of Bordeaux. We worked in team of five and I specialized in the JS development using Phaser3. It was a completely new tech for me and I learned a lot in little time. Then again, the freeCodeCamp JS formation was pretty useful.</p>
-            <img src="../../../img/video-games/chloe-au-musee/cam-gameplay1.gif" style="width: 100%;">
-            <p>One of the peculiarities of this game was that it needed to be playable from a phone since it was made for the visitors of the museum (who didn't have a computer access). So we had to make sure that it was as responsive as possible.</p>
-            <p>Only con was that the sound design was sketchy as it had been done at the last moment and under hard time constraints.</p>
-            
-            <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png" style="width: 49%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone1.jpg" style="width: 24%;">
-                <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg" style="width: 24%;">
-            </div>
-        </div>
+      <div class="div-column" style="width: 70%">
+        <p>
+          <b>2022</b> <b>Musée des Beaux Arts</b> <b>Online mobile first</b>
+          <b>Phaser 3</b>
+        </p>
+        <p>
+          During the project "Rêve et Ville" ("Dream and City") at the beginning
+          of year 2022, I had the opportunity to create an interactive
+          experience about the Musée des Beaux-Arts of Bordeaux. We worked in
+          team of five and I specialized in the JS development using Phaser3. It
+          was a completely new tech for me and I learned a lot in little time.
+          Then again, the freeCodeCamp JS formation was pretty useful.
+        </p>
+        <img
+          src="../../../img/video-games/chloe-au-musee/cam-gameplay1.gif"
+          style="width: 100%"
+        />
+        <p>
+          One of the peculiarities of this game was that it needed to be
+          playable from a phone since it was made for the visitors of the museum
+          (who didn't have a computer access). So we had to make sure that it
+          was as responsive as possible.
+        </p>
+        <p>
+          Only con was that the sound design was sketchy as it had been done at
+          the last moment and under hard time constraints.
+        </p>
 
-        <div class="div-column" style="width: 30%; margin-left : 50px;">
-            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
-                <div class="project-window-navbar">
-                    <p class="project-window-title" id="project-id">PLAY</p>
-                </div>
-                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://chase-tag.herokuapp.com/" target="_blank">Discover the game</a>
-                </div>
-            </div>
+        <div class="div-row" style="width: 100%">
+          <img
+            src="../../../img/video-games/chloe-au-musee/chloe-au-musee1.png"
+            style="width: 49%"
+          />
+          <img
+            src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone1.jpg"
+            style="width: 24%"
+          />
+          <img
+            src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg"
+            style="width: 24%"
+          />
         </div>
+      </div>
+
+      <div class="div-column" style="width: 30%; margin-left: 50px">
+        <div
+          class="project-window2"
+          href="./html/index/jeu_video.html"
+          style="height: fit-content; margin: 0"
+        >
+          <div class="project-window-navbar">
+            <p class="project-window-title" id="project-id">PLAY</p>
+          </div>
+          <div
+            class="project-window-content"
+            style="
+              margin-top: 40px;
+              width: fit-content;
+              display: flex;
+              flex-direction: column;
+            "
+          >
+            <a
+              class="external-link"
+              href="https://chloe-au-musee.netlify.app/"
+              target="_blank"
+              >Discover the game</a
+            >
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="div-row other-projects">
-        <button id='left-project-button' class="next-project-button">◄</button>
-        <div style="width: 50%; height: 100%; display: flex; justify-content: center; align-items: center;">
-            <p id="left-project" class="next-project-title">Project1</p>
-        </div>
-        <div style="width: 50%;  height: 100%; display: flex; justify-content: center; align-items: center;">
-            <p id="right-project" class="next-project-title">Project2</p>
-        </div>
-        <button id='right-project-button' class="next-project-button" style="background: linear-gradient(to left, var(--secondary-color), var(--background-color));">►</button>
+      <button id="left-project-button" class="next-project-button">◄</button>
+      <div
+        style="
+          width: 50%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <p id="left-project" class="next-project-title">Project1</p>
+      </div>
+      <div
+        style="
+          width: 50%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        "
+      >
+        <p id="right-project" class="next-project-title">Project2</p>
+      </div>
+      <button
+        id="right-project-button"
+        class="next-project-button"
+        style="
+          background: linear-gradient(
+            to left,
+            var(--secondary-color),
+            var(--background-color)
+          );
+        "
+      >
+        ►
+      </button>
     </section>
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer grid-footer-blog"></div>
-        <p>Made by Alvina Damasio--Razafiarizaka</p>
+      <div class="grid grid-footer grid-footer-blog"></div>
+      <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../../../js/mouse-cursor.js"></script>
     <script src="../../../data/video-games.js"></script>
     <script src="../../../js/next-vg.js"></script>
-</body>
+  </body>
 </html>
