--- a/html/contact.html
+++ b/html/contact.html
@@ -1,90 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alvina DR | Contact</title>
 
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/text.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/footer.css">
-    <link rel="stylesheet" href="../css/page-index.css">
-    <link rel="stylesheet" href="../css/project-window.css">
-    <link rel="stylesheet" href="../css/page-contact.css">
-    <link rel="stylesheet" href="../css/pointer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/text.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/page-index.css" />
+    <link rel="stylesheet" href="../css/project-window.css" />
+    <link rel="stylesheet" href="../css/page-contact.css" />
+    <link rel="stylesheet" href="../css/pointer.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="cursor-default cursor-hidden"></div>
     <div class="mail-div" id="mail-cursor">
-        <p id="text-to-copy">alvinadr24@gmail.com</p>
+      <p id="text-to-copy">alvinadr24@gmail.com</p>
     </div>
 
     <!-- NAVBAR -->
     <div class="grid grid-header"></div>
     <navbar>
-        <ul class="nav-ul">
-            <li class="nav-link"><a href="../index.html">Home</a></li>
-            <li class="nav-link"><a href="about.html">About</a></li>
-            <li class="nav-link"><a href="contact.html">Contact</a></li>
-        </ul>
+      <ul class="nav-ul">
+        <li class="nav-link"><a href="../index.html">Home</a></li>
+        <li class="nav-link"><a href="about.html">About</a></li>
+        <li class="nav-link"><a href="contact.html">Contact</a></li>
+      </ul>
     </navbar>
-    
-    <div class="grid grid-contact-1" style="height: calc(3vw * 8 + .1em);"></div>
+
+    <div
+      class="grid grid-contact-1"
+      style="height: calc(3vw * 8 + 0.1em)"
+    ></div>
     <section id="landing-section" class="div-row">
-        <div class="div-column">
-            <h1>Contact</h1>
-        </div>
+      <div class="div-column">
+        <h1>Contact</h1>
+      </div>
     </section>
 
-    <section id="contact-section" class="div-row" style="margin-bottom: 40px;">
-        <div class="div-row" style="margin-top: 5px;">
-            <p>Hi there, to contact me you can copy my email adress by clicking on the image on the right. I'm always happy to talk :D</p>
+    <section id="contact-section" class="div-row" style="margin-bottom: 40px">
+      <div class="div-row" style="margin-top: 5px">
+        <p>
+          Hi there, to contact me you can copy my email adress by clicking on
+          the image on the right. I'm always happy to talk :D
+        </p>
+      </div>
+      <div class="div-row" style="justify-content: flex-end">
+        <div class="project-window2" href="./html/index/jeu_video.html">
+          <div class="project-window-navbar">
+            <p class="project-window-title" id="project-id">Social media</p>
+          </div>
+          <div class="project-window-content div-row">
+            <a href="https://www.linkedin.com/in/alvina-dr/" target="_blank"
+              ><img src="../img/icons/linkedin.svg" class="icon-social-media"
+            /></a>
+            <a href="https://twitter.com/alvina_dr_" target="_blank"
+              ><img src="../img/icons/twitter.svg" class="icon-social-media"
+            /></a>
+            <a
+              href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"
+              target="_blank"
+              ><img src="../img/icons/youtube.svg" class="icon-social-media"
+            /></a>
+          </div>
         </div>
-        <div class="div-row" style="justify-content: flex-end;">
-            <div class="project-window2" href="./html/index/jeu_video.html">
-                <div class="project-window-navbar">
-                    <p class="project-window-title" id="project-id">Social media</p>
-                </div>
-                <div class="project-window-content div-row">
-                    <a href="https://www.linkedin.com/in/alvina-dr/" target="_blank"><img src="../img/icons/linkedin.svg" class="icon-social-media"/></a>
-                    <a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_blank"><img src="../img/icons/youtube.svg" class="icon-social-media"/></a>                      
-                </div>
+        <div class="project-window1" href="./html/index/jeu_video.html">
+          <img
+            class="project-window1-image"
+            src="../img/photomontage/P1.jpg"
+            id="mail-zone"
+          />
+          <div class="project-card-data">
+            <div
+              class="project-card-content"
+              style="display: flex; justify-content: space-between"
+            >
+              <p id="project-nav-title" class="project-window-title">
+                Click me
+              </p>
+              <p
+                id="tooltip"
+                class="project-window-title"
+                style="
+                  width: fit-content;
+                  justify-self: flex-end;
+                  background-color: transparent;
+                  color: transparent;
+                  text-transform: uppercase;
+                  padding: 0 3px;
+                "
+              >
+                Copied
+              </p>
             </div>
-            <div class="project-window1" href="./html/index/jeu_video.html" >
-                <img class="project-window1-image" src="../img/photomontage/P1.jpg" id="mail-zone"/>
-                <div class="project-card-data">
-                    <div class="project-card-content" style="display: flex; justify-content: space-between;">
-                        <p id="project-nav-title" class="project-window-title">Click me</p>
-                        <p id="tooltip" class="project-window-title" style="width: fit-content; justify-self: flex-end; background-color: transparent; color: transparent; text-transform: uppercase; padding: 0 3px;">Copied</p>
-
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+      </div>
     </section>
-       
+
     <div class="scroll-text-div">
-        <div style="width: 10000000px">
-            <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
-            </div>
-            <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
-            </div>
+      <div style="width: 10000000px">
+        <div class="scroll-text">
+          <h5>
+            &nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL
+            DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .
+          </h5>
         </div>
+        <div class="scroll-text">
+          <h5>
+            &nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL
+            DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .
+          </h5>
+        </div>
+      </div>
     </div>
 
     <!-- FOOTER -->
     <footer>
-        <div class="grid grid-footer"></div>
-        <p>Made by Alvina Damasio--Razafiarizaka</p>
+      <div class="grid grid-footer"></div>
+      <p>Made by Alvina Damasio--Razafiarizaka</p>
     </footer>
     <script src="../js/copy.js"></script>
     <script src="../js/circle-text.js"></script>
     <script src="../js/mouse-cursor.js"></script>
-
-</body>
+  </body>
 </html>
