added: embed tweets

--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR | Chase tag</title>
+    <title>Alvina DR | Chase Tag</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -32,12 +32,10 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 13 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 16 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Chase Tag</h1>
     </section>
-
-<!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
@@ -50,7 +48,6 @@
                 <img src="../../../img/video-games/chase-tag/chase-tag-old.gif" style="width: 49%;">
                 <img src="../../../img/video-games/chase-tag/chase-tag-new.gif" style="width: 49%;">
             </div>
-            <img >
         </div>
         <div class="div-column" style="width: 30%; margin-left : 50px;">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
@@ -62,6 +59,10 @@
                     <a class="external-link" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank" style="width: fit-content; margin: auto;">Old version</a>
                 </div>
             </div>
+            <div style="margin-top: 1rem;">
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Small update on the chase tag game, I added a few fx here and there✨<br><br>Pretty interesting to see how Phaser&#39;s logic works for tweens and particles (and how to keep this whole thing synchronous for the other players).<a href="https://twitter.com/hashtag/gamedev?src=hash&amp;ref_src=twsrc%5Etfw">#gamedev</a> <a href="https://twitter.com/hashtag/phaser3?src=hash&amp;ref_src=twsrc%5Etfw">#phaser3</a> <a href="https://twitter.com/hashtag/webgame?src=hash&amp;ref_src=twsrc%5Etfw">#webgame</a> <a href="https://twitter.com/hashtag/gamefx?src=hash&amp;ref_src=twsrc%5Etfw">#gamefx</a> <a href="https://twitter.com/hashtag/multiplayer?src=hash&amp;ref_src=twsrc%5Etfw">#multiplayer</a> <a href="https://t.co/dL8v24FGO6">pic.twitter.com/dL8v24FGO6</a></p>&mdash; Alvina Damasio--Razafiarizaka (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1680984166177861632?ref_src=twsrc%5Etfw">July 17, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+
         </div>
     </section>
 
