--- a/html/projects/video-games/diver-down.html
+++ b/html/projects/video-games/diver-down.html
@@ -61,6 +61,9 @@
                     <a class="external-link" href="https://marchosias6.itch.io/diver-down" target="_blank">Discover the game</a>
                 </div>
             </div>
+            <div style="margin-top: 1rem;">
+                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Added some volumetric lights with HDRP for our underwater puzzle game 🤿✨<a href="https://twitter.com/hashtag/PostJamProductions?src=hash&amp;ref_src=twsrc%5Etfw">#PostJamProductions</a> <a href="https://twitter.com/hashtag/madewithunity?src=hash&amp;ref_src=twsrc%5Etfw">#madewithunity</a> <a href="https://twitter.com/hashtag/volumetriclight?src=hash&amp;ref_src=twsrc%5Etfw">#volumetriclight</a> <a href="https://twitter.com/hashtag/techart?src=hash&amp;ref_src=twsrc%5Etfw">#techart</a> <a href="https://t.co/RDGTSFm9UA">pic.twitter.com/RDGTSFm9UA</a></p>&mdash; Alvina Damasio--Razafiarizaka (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1689361008098226176?ref_src=twsrc%5Etfw">August 9, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </section>
 
