--- a/html/projects/video-games/overboss.html
+++ b/html/projects/video-games/overboss.html
@@ -36,8 +36,6 @@
         <h1>Overboss</h1>
     </section>
 
-<!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
-
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
             <p id="hashtags"><b>#Boardgame adaptation</b> <b>#Rhythm Game</b> <b>#Optimisation</b> <b>#Level Editor</b></p>
@@ -62,14 +60,15 @@
             <p>We didn't have a lot of time so a lot of the environment was badly organised, prefab multiplied, objects invisible but still there, it wasn't pretty. Cleaning up this mess was the first step. Then I started to look into the clouds that I had done weeks earlier with the Unity particle system. Reducing the number of particles and making them bigger instead, making the particles life time longer and looping, pausing them when out of the player's view (culling). Quickly enough we got to a pretty good fps.</p>
         </div>
 
-        <div class="div-column" style="width: 30%; margin-left : 40px;">
-            <p>2022-23 | 2m | School Project | Oculus Quest 2 / Computer</p>
-            <p>Tools : Unity, Blender, DOTween</p>
-            <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/eba-effect/ee-pause-ui.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/eba-effect/ee-prototype2.gif" style="width: 49%;">
-            </div>            
-            <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://store.steampowered.com/app/2109390/Overboss/" target="_blank">Discover the game</a>
+                </div>
+            </div>
         </div>
     </section>
 
