diver down + overboss tags

--- a/html/projects/video-games/diver-down.html
+++ b/html/projects/video-games/diver-down.html
@@ -41,7 +41,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p><b>#Unity</b> <b>#Zenject</b> <b>#HDRP</b></p>
+            <p><b>2023</b> <b>Unity</b> <b>Zenject</b> <b>HDRP</b></p>
             <p>Diver Down is the result of my third EMMI Jam (a jam that we organise between MMI and the ENSEIRB which is an engineer school in Bordeaux). We had a team of five and were two devs, which allowed me to focus on the graphic side of the game.</p>
             <p>The initial game was already looking pretty good for a 48 hours jam and it caught the eye of the jury (composed from video game developers from Asobo, Ubisoft, Shiro Games and more). We ranked first place and won pretty <a class="link-in-text" href="https://store.steampowered.com/app/1182900/A_Plague_Tale_Requiem/" target="_blank">A Plague Tale : Requiem</a> artbooks.</p>
             <p></p>
