--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -52,7 +52,7 @@
       <a class="btn1" onclick="filterSelection('work')">WORK</a>
       <a class="btn1" onclick="filterSelection('school')">SCHOOL</a>
       <a class="btn1" onclick="filterSelection('jam')">JAM</a>
-      <a class="btn1" onclick="filterSelection('prototype')">PROTOTYPE</a>
+      <a class="btn1" onclick="filterSelection('prototype')">SOLO DEV</a>
     </div>
     <br />
     <section id="video-game-section" class="div-row">
