feat: reduce website width

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -37,7 +37,7 @@
     </navbar>
 
     <div class="grid grid-video-game-1"></div>
-    <section id="landing-section">
+    <section id="landing-section" style="width: 75%;">
       <h1>Video games</h1>
     </section>
 
@@ -46,7 +46,7 @@
     <div
       class="div-row"
       id="filter-btn-container"
-      style="justify-content: flex-start"
+      style="justify-content: flex-start; width: 75%;"
     >
       <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>
       <a class="btn1" onclick="filterSelection('work')">WORK</a>
