--- a/index.html
+++ b/index.html
@@ -32,13 +32,12 @@
     </navbar>
     
     <div class="grid grid-index-1" style="height: calc(3vw * 13 + .1em);"></div>
-    <section id="landing-section">
+    <section id="landing-section" style="padding-left: 10px;">
         <h1>Alvina</h1>
-        <p>2023</p>
+        <h3 style="font-weight: 300; margin-top: 0; font-size:large;">Damasio--Razafiarizaka</h3>
     </section>
 
     <div class="div-row" id="index-main-section">
-
         <!-- ABOUT ME  -->
         <section id="about-section">
             <div>
