feat: working on new project pages

--- a/html/projects/video-games/luminar-expedition.html
+++ b/html/projects/video-games/luminar-expedition.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alvina DR | Diver Down</title>
+    <title>Alvina DR | Luminar Expedition</title>
 
     <link rel="stylesheet" href="../../../css/main.css">
     <link rel="stylesheet" href="../../../css/text.css">
@@ -23,7 +23,7 @@
     <div class="cursor-default cursor-hidden"></div>
 
     <!-- NAVBAR -->
-    <div class="grid grid-header"></div>
+    <div class="grid grid-header grid-navbar-blog"></div>
     <navbar id="blog-navbar">
         <ul class="nav-ul">
             <li class="nav-link"><a href="../../../index.html">Home</a></li>
@@ -32,37 +32,34 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 20 + .1em); "></div>
+    <div class="grid grid-blog"></div>
     <section id="landing-blog-section">
-        <h1>Diver Down</h1>
+        <h1>Luminar Expedition</h1>
     </section>
-
-<!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p><b>2023</b> <b>Unity</b> <b>Zenject</b> <b>HDRP</b></p>
-            <p>Diver Down is the result of my third EMMI Jam (a jam that we organise between MMI and the ENSEIRB which is an engineer school in Bordeaux). We had a team of five and were two devs, which allowed me to focus on the graphic side of the game.</p>
-            <p>The initial game was already looking pretty good for a 48 hours jam and it caught the eye of the jury (composed from video game developers from Asobo, Ubisoft, Shiro Games and more). We ranked first place and won pretty <a class="link-in-text" href="https://store.steampowered.com/app/1182900/A_Plague_Tale_Requiem/" target="_blank">A Plague Tale : Requiem</a> artbooks.</p>
-            <p></p>
+            <p id="hashtags"><b>C++</b> <b>No engine</b> <b>Polish</b> <b>Localization</b></p>
+            <p>Overboss is originally a board-game published by Brotherwise Games. To play, the players place tiles and tokens on their board. The goal is to be the one to make the most points. The video game adaptation was made at BlanketGames (formerly TavroxGames) and published by GoblinzStudio. I personnaly worked around six months on the project during my work-study program and the engine used was Unity.</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/x7fhf7v0gUM?si=LZGMtZXwB7isp0jE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jnkFhjtR9LQ?si=XGipy0GDgKqMvZ13" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>This game was a great opportunity to improve my technical art skills so after the jam was over I kept working on it. I switched the whole project to HDRP and learned how to use volumetric lights and fog or make a see through wall shader. On top of the gameplay programming, I did a bit of 3d modeling with Blender which I had tried a few time already and I really enjoy.</p>
-            <p>It's one of the games I'm the most proud to show people and to this day I'm still adding bits here and there to make it better.</p>
+            <p>We were a really small team (with at the peak of the project  three programmers but otherwise two).</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/overboss/overboss-campaign.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/overboss/overboss-multi-local.jpg" style="width: 49%;">
+            </div> 
+            <p>One of the first things we did was design a .csv file, basically a table you can open in excel. We thought of three columns : spawn time, life duration and spawn position. In other words : the time in the music at which the target should spawn, how long the target would stay on screen (if you don't shoot it in time it disapears and you loose life) and where it should spawn in the scene. Of course, this organisation would change a lot in the future but those were the basics we needed.</p>
         </div>
-        
+
         <div class="div-column" style="width: 30%; margin-left : 50px;">
             <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="https://marchosias6.itch.io/diver-down" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://store.steampowered.com/app/2109390/Overboss/" target="_blank">Discover the game</a>
                 </div>
-            </div>
-            <div style="margin-top: 1rem;">
-                <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">Added some volumetric lights with HDRP for our underwater puzzle game 🤿✨<a href="https://twitter.com/hashtag/PostJamProductions?src=hash&amp;ref_src=twsrc%5Etfw">#PostJamProductions</a> <a href="https://twitter.com/hashtag/madewithunity?src=hash&amp;ref_src=twsrc%5Etfw">#madewithunity</a> <a href="https://twitter.com/hashtag/volumetriclight?src=hash&amp;ref_src=twsrc%5Etfw">#volumetriclight</a> <a href="https://twitter.com/hashtag/techart?src=hash&amp;ref_src=twsrc%5Etfw">#techart</a> <a href="https://t.co/RDGTSFm9UA">pic.twitter.com/RDGTSFm9UA</a></p>&mdash; Alvina Damasio--Razafiarizaka (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1689361008098226176?ref_src=twsrc%5Etfw">August 9, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </div>
     </section>
@@ -86,5 +83,6 @@
     <script src="../../../js/mouse-cursor.js"></script>
     <script src="../../../data/video-games.js"></script>
     <script src="../../../js/next-vg.js"></script>
+    <script src="../../../js/vg-template.js"></script>
 </body>
 </html>
